compiler/testData/diagnostics/testWithModifiedMockJdk/throwableConstructor.kt
abstract class A : <!DEPRECATION!>Throwable<!>(1.0) {}

fun foo() {
    <!DEPRECATION!>Throwable<!>(1.5)
}
